--- a/ckanext/nmwd_theme/public/css/index.css
+++ b/ckanext/nmwd_theme/public/css/index.css
@@ -4,7 +4,10 @@
   margin: 0px;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 ul {
     margin: 0;
     padding: 0;
